# kernelbox-dev

./: .gitignore  ARUN.md  CLAUDE.md  COMBINED_BRANCH_REPORT.md  GUIDE.md  ITERATE.md  LICENSE  Makefile  OUTER.md  PIPELINE.md  PROPOSAL.md  README.md  TESTS.md  pyproject.toml
examples/data/: blend.h5  blend.pt  conv1d.h5  conv1d.pt  mlp.h5  mlp.pt  normalize.h5  normalize.pt
examples/dev/: microbench.py  test_async_timing.py  test_attention.py  test_attention_dict.py  test_bench.py  test_blend.py  test_conv1d.py  test_custom_params.py  test_custom_params_mixed.py  test_extra_params.py  test_fused_add_mul.py  test_hello.py  test_kernel_mode_cuda.py  test_layernorm.py  test_load_cubin.py  test_load_ptx.py  test_mlp.py  test_mlp_debug.py  test_mlp_pt.py  test_mlp_suite.py  test_scale.py  (+26 more)
python/: pyproject.toml
python/kernelbox/: __init__.py  data_spec.py  dev.py  h5.py  isolated_kernel_mode.py  iterate.py  task_service.py  tasks.py  vmm.py
python/kernelbox/pipeline/: __init__.py  codegen.py  cuda_templates.py  graph_parser.py  inject.py
python/kernelbox/task_defs/: __init__.py  cuda_pairwise_hidden.py  cuda_pairwise_kernel_mode.py  cuda_pairwise_public.py  triton_pairwise_hidden.py  triton_pairwise_kernel_mode.py  triton_pairwise_public.py
src/: cuda_check.c  cuda_check.h  ipc.c  ipc.h  va.h  vmm.c  vmm.h
tests/: test_cuda_check.c  test_ipc_fd.c  test_kbox_cli.sh  test_kbox_mcp.py  test_task_service.py
tools/: gen_nanogpt_kbox.py  kbox.c  kbox_isolated_kernel_mode.py  kbox_iterate.py  kbox_mcp.py  kbox_pipeline.py  kbox_protocol.h  kbox_worker_daemon.c
(+93 files in other folders)
